<resources>
    <string name="app_name">KotlinFinalProject</string>
    <string name="city_file_name">en_cities.json</string>
    <string name="no_city_file_found">No city available, try again later..</string>
    <string name="choose_city">Choose a city</string>
    <string name="next_city">What would be the next city?</string>
    <string name="vote_city">Vote for next city !</string>
    <string name="default_text">[default text]</string>
    <string name="default_city">Default City</string>
    <string name="exit">x</string>
    <string name="app_settings">App settings</string>
    <string name="account">Account</string>
    <string name="signin">Sign In</string>
    <string name="signout">Sign Out</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share</string>
    <string name="version">Version 10.56</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="where_are_we_going">Where are we going ?</string>
    <string name="use_curent_position">Use curent position</string>
    <string name="bourg_la_reine_exemple">Bourg-La-Reine (exemple)</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="adjust">Adjust</string>

</resources>