<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyLight"
    tools:context=".ChooseCity">
    <LinearLayout
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/backButton"
                android:layout_width="60dp"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_height="60dp"
                android:background="@drawable/roundbutton"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_settings"
                android:textSize="30sp"
                android:textColor="@color/greyDark"
                android:layout_marginStart="30sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:contentDescription="@string/choose_city"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_location_city_green24"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/default_city"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/greyDark"
                android:layout_marginStart="15sp"
                />
            <Button
                android:id="@+id/choose_city"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/choose_city"
                android:textSize="11sp"
                android:layout_marginEnd="1dp"
                android:backgroundTint="@color/greyLight"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/greyDark"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_account_circle_24"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/greyDark"
                android:layout_marginStart="15sp"
                />
            <Button
                android:id="@+id/c"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginEnd="1dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/signin"
                android:textSize="11sp"
                android:backgroundTint="@color/greyLight"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/greyDark"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_email_24"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/greyDark"
                android:layout_marginStart="15sp"
                />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/greyDark"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_share_24"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/greyDark"
                android:layout_marginStart="15sp"
                />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/greyDark"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/greyDark"
            />
    </LinearLayout>
</ScrollView>