<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DepartureFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/backgroundView"
            android:background="@drawable/rounded_bg_green"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:id="@+id/departureInput"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:background="@drawable/rounded_bg_white"
            app:layout_constraintTop_toTopOf="@id/backgroundView"
            android:layout_marginTop="-40dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_search_40"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/primaryGreen"
                android:layout_height="55dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/start"
                android:src="@drawable/ic_baseline_search_40"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="55dp"
                android:textAlignment="center"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:textSize="23sp"
                android:gravity="center"
                android:hint="@string/where_are_we_going"
                android:src="@drawable/ic_baseline_search_40"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/useCurentPosition"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_bg_green_light"
            app:layout_constraintTop_toBottomOf="@id/departureInput"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_gps_fixed_40"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_height="55dp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:text="@string/use_curent_position"
                android:src="@drawable/ic_baseline_search_40"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/iconsPosition"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/useCurentPosition"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/default_text"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_bg_green_dark"
                android:src="@drawable/ic_baseline_history_40"
                />
            <ImageButton
                android:contentDescription="@string/default_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_bg_green_light"
                android:src="@drawable/ic_baseline_star_40"
                />
            <ImageButton
                android:contentDescription="@string/default_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_bg_green_light"
                android:src="@drawable/ic_baseline_calendar_today_40"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/savedPosition"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_bg_white"
            app:layout_constraintTop_toBottomOf="@id/iconsPosition"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_location_on_24_green"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_height="55dp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:text="@string/bourg_la_reine_exemple"
                android:src="@drawable/ic_baseline_search_40"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/HomeWork"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_bg_white"
            app:layout_constraintTop_toBottomOf="@id/savedPosition"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/rounded_bg_white"
                app:layout_constraintTop_toBottomOf="@id/iconsPosition"
                android:orientation="horizontal">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_location_on_24_green"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:layout_height="55dp"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:text="@string/home"
                    android:src="@drawable/ic_baseline_search_40"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:text="@string/adjust"
                    android:layout_gravity="center"
                    android:contentDescription="@string/default_text"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_bg_white_border"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primaryGreen"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/rounded_bg_white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_location_on_24_green"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:layout_height="55dp"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:text="@string/work"
                    android:src="@drawable/ic_baseline_search_40"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:text="@string/adjust"
                    android:layout_gravity="center"
                    android:contentDescription="@string/default_text"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_bg_white_border"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>